shim/shim.h

    /* Opaque types — defined in the vendored bmesh headers. */
    typedef struct BMesh BMesh;
    typedef struct BMVert BMVert;
    typedef struct BMEdge BMEdge;
    typedef struct BMLoop BMLoop;
    typedef struct BMFace BMFace;
    /* Snapshot the mesh into flat buffers. The caller pre-sizes the verts/edges/
     * face_offsets/face_lens buffers using the tot* counts (verts: tot*3 floats,
     * edges: tot*2 ints, face_offsets/face_lens: tot ints). face_verts_cap should
     * be the sum of all face lengths (caller can call bms_snapshot once with a
     * generous estimate; returns false if too small). */
    bool bms_snapshot(BMesh *bm,
                      float *out_verts, int out_verts_cap,
                      int *out_edges, int out_edges_cap,
                      int *out_face_offsets, int out_face_offsets_cap,
                      int *out_face_verts, int out_face_verts_cap,
                      int *out_face_lens, int out_face_lens_cap);
    /* Read / write typed values at a layer offset on any BM element. */
    void bms_elem_get_float(void *elem, int offset, float *out);
    void bms_elem_set_float(void *elem, int offset, float value);
    void bms_elem_get_float2(void *elem, int offset, float out[2]);
    void bms_elem_set_float2(void *elem, int offset, const float in[2]);
    void bms_elem_get_float3(void *elem, int offset, float out[3]);
    void bms_elem_set_float3(void *elem, int offset, const float in[3]);
    void bms_elem_get_float4(void *elem, int offset, float out[4]);
    void bms_elem_set_float4(void *elem, int offset, const float in[4]);
    void bms_elem_get_int(void *elem, int offset, int *out);
    void bms_elem_set_int(void *elem, int offset, int value);
    /* Iterate every element of `domain` in `BM_ITER_MESH` order and write
     * the layer's value at `offset` into a flat output buffer.
     *
     * `components` is 1/2/3/4 for the matching `bms_elem_get_floatN`; the
     * function writes `bm_tot<domain> * components` floats. For loops the
     * iteration order is faces in `BM_ITER_MESH(BM_FACES_OF_MESH)` order,
     * and within each face the face's existing loop cycle starting at
     * `BM_FACE_FIRST_LOOP`. This matches the `face_verts` order
     * `bms_snapshot` writes.
     *
     * `out_floats_cap` is the buffer's capacity in floats; the function
     * returns false if it is smaller than the required total, or if
     * `domain` is invalid.
     */
    bool bms_layer_read_floats(BMesh *bm,
                               int domain,
                               int offset,
                               int components,
                               float *out_floats,
                               int out_floats_cap);
    /* Same shape as `bms_layer_read_floats` for `CD_PROP_INT32` layers
     * (one int per element). Returns false on bad domain / buffer too
     * small. */
    bool bms_layer_read_ints(BMesh *bm,
                             int domain,
                             int offset,
                             int *out_ints,
                             int out_ints_cap);
    /* Element count for `domain` (0=vert, 1=edge, 2=loop, 3=face).
     * Returns -1 for an invalid domain. */
    int bms_domain_elem_count(BMesh *bm, int domain);
    /* Look up a CD layer's byte offset by `(domain, type, name)`. Returns
     * the offset if a matching layer exists, or -1 if no such layer is
     * registered (and `bms_layer_add_named` would have to be called to
     * register one). Read-only — never mutates the CustomData block. */
    int bms_layer_find_offset_named(BMesh *bm, int domain, int type, const char *name);
    /* Compute the 3D convex hull of a raw point cloud, exposing the hull
     * engine's face loops directly. This is a pure geometry entry point: it
     * builds no mesh and touches no BMesh state. It is the same engine, on the
     * same code path, that the `convex_hull` operator uses internally.
     *
     *   - `coords`     — `coords_len` input points. May be null only when
     *                    `coords_len == 0`.
     *
     * Three parallel outputs describe the hull:
     *
     *   - `out_orig_index[h]` — for each hull vertex `h`, the index into
     *                           `coords` of the input point it came from.
     *                           Input points that are not on the hull (and
     *                           duplicates merged by the engine) have no hull
     *                           vertex, so this mapping is injective but not
     *                           onto. Capacity `out_verts_cap`; true length
     *                           reported in `*r_verts_len`.
     *   - `out_face_sizes[f]` — the loop length of hull facet `f`. Facets are
     *                           the engine's own — coplanar facets are already
     *                           merged into a single n-gon, so a facet is not
     *                           necessarily a triangle. Capacity
     *                           `out_faces_cap`; true length (the facet count)
     *                           reported in `*r_faces_len`.
     *   - `out_loops`         — the facets' vertex loops, concatenated in
     *                           facet order: facet `f` occupies the
     *                           `out_face_sizes[f]` entries following those of
     *                           facets `0..f-1`. Each entry is a *hull* vertex
     *                           index (an index into the `out_orig_index`
     *                           mapping above, not into `coords`). Capacity
     *                           `out_loops_cap`; true total length reported in
     *                           `*r_loops_len`.
     *
     * Each loop is reported exactly as the engine emits it: same starting
     * vertex, same winding (outward-facing), no sorting, rotation or
     * renormalisation of any kind, and no facet is dropped -- a degenerate
     * facet of fewer than three vertices, should the engine ever emit one, is
     * reported with its true size rather than filtered out. Loops are
     * truncated only by the caps.
     *
     * For each output, a reported length greater than its cap signals
     * truncation, and the buffer may be null only when its cap is zero
     * (size-probing mode: pass all three caps as zero to learn the sizes,
     * then call again with buffers).
     *
     * A hull needs at least four non-coplanar points. When the input is empty,
     * or degenerate (all points coincident, collinear or coplanar), the engine
     * may report a hull with no facets; the vertex list can still be
     * non-empty. Callers should treat `*r_faces_len == 0` as "no volumetric
     * hull", not as an error.
     *
     * Returns 0 on success, or -1 if the input was rejected (null `coords`
     * with a non-zero `coords_len`, or a negative length or capacity). */
    int bms_convex_hull_compute(const float (*coords)[3], int coords_len,
                                int *out_orig_index, int out_verts_cap,
                                int *r_verts_len,
                                int *out_loops, int out_loops_cap,
                                int *r_loops_len,
                                int *out_face_sizes, int out_faces_cap,
                                int *r_faces_len);