src/lib.rs


    /// Read/write typed CD values at a given layer offset on any BM
    /// element. `elem` may be any of `*mut BMVert`/`BMEdge`/`BMLoop`/`BMFace`;
    /// the wrappers dereference via the uniform `BMHead.data` prefix.
    pub fn bms_elem_get_float(elem: *mut std::ffi::c_void, offset: c_int, out: *mut f32);
    pub fn bms_elem_set_float(elem: *mut std::ffi::c_void, offset: c_int, value: f32);
    pub fn bms_elem_get_float2(elem: *mut std::ffi::c_void, offset: c_int, out: *mut f32);
    pub fn bms_elem_set_float2(elem: *mut std::ffi::c_void, offset: c_int, value: *const f32);
    pub fn bms_elem_get_float3(elem: *mut std::ffi::c_void, offset: c_int, out: *mut f32);
    pub fn bms_elem_set_float3(elem: *mut std::ffi::c_void, offset: c_int, value: *const f32);
    pub fn bms_elem_get_float4(elem: *mut std::ffi::c_void, offset: c_int, out: *mut f32);
    pub fn bms_elem_set_float4(elem: *mut std::ffi::c_void, offset: c_int, value: *const f32);
    pub fn bms_elem_get_int(elem: *mut std::ffi::c_void, offset: c_int, out: *mut c_int);
    pub fn bms_elem_set_int(elem: *mut std::ffi::c_void, offset: c_int, value: c_int);

    /// Number of elements of `domain` currently in the mesh (matches the
    /// matching `bm->tot*` field). Returns `-1` for an invalid domain.
    pub fn bms_domain_elem_count(bm: *mut BMesh, domain: c_int) -> c_int;

    /// Look up a CD layer's byte offset by `(domain, type, name)` without
    /// adding it. Returns the offset if a matching layer exists, or `-1`
    /// if no such layer is registered. Read-only.
    pub fn bms_layer_find_offset_named(
        bm: *mut BMesh,
        domain: c_int,
        type_: c_int,
        name: *const std::os::raw::c_char,
    ) -> c_int;

    /// Read every element-of-`domain`'s CD value at `offset` into a flat
    /// float buffer, in `BM_ITER_MESH` order. `components` is 1/2/3/4
    /// (matching `bms_elem_get_floatN`); the function writes
    /// `bms_domain_elem_count(bm, domain) * components` floats. For loops
    /// the iteration order is faces in `BM_ITER_MESH(BM_FACES_OF_MESH)`
    /// order, then each face's loop cycle starting at
    /// `BM_FACE_FIRST_LOOP` — the same layout `bms_snapshot` uses for
    /// `face_verts`. Returns `false` on an invalid domain / unsupported
    /// component count / buffer too small.
    pub fn bms_layer_read_floats(
        bm: *mut BMesh,
        domain: c_int,
        offset: c_int,
        components: c_int,
        out_floats: *mut f32,
        out_floats_cap: c_int,
    ) -> bool;

    /// Read every element-of-`domain`'s `CD_PROP_INT32` value at `offset`
    /// into a flat int buffer, in the same iteration order as
    /// [`bms_layer_read_floats`]. Returns `false` on an invalid domain or
    /// buffer too small.
    pub fn bms_layer_read_ints(
        bm: *mut BMesh,
        domain: c_int,
        offset: c_int,
        out_ints: *mut c_int,
        out_ints_cap: c_int,
    ) -> bool;
}

pub mod owned;
